syntax = "proto3";
package nextpex;

option go_package = "github.com/tinaxd/nextpex/types";

message Time {
    int32 hour = 1;
    int32 minute = 2;
    int32 second = 3;
    int32 date = 4;
    int32 month = 5;
    int32 year = 6;
}

message LevelResponse {
    int32 level = 1;
    Time time = 2;
    string username = 3;
}

message AllLevelResponse {
    repeated LevelResponse levels = 1;
}

message RankResponse {
    int32 rank = 1;
    Time time = 2;
    string username = 3;
}

message AllRankResponse {
    repeated RankResponse ranks = 1;
}

message NowPlayingResponse {
    string username = 1;
    string game = 2;
    Time started_at = 3;
}

message AllNowPlayingResponse {
    repeated NowPlayingResponse now_playings = 1;
}

message GameSession {
    string username = 1;
    string game = 2;
    Time started_at = 3;
    Time ended_at = 4;
}

message LatestGameSessionResponse {
    repeated GameSession game_sessions = 1;
}

message MonthlyPlayedTimeEntry {
    int32 month = 1;
    int32 year = 2;
    int32 played_time = 3; // in seconds
}

message MonthlyPlayedTime {
    string username = 1;
    string game = 2;
    repeated MonthlyPlayedTimeEntry entries = 3;
}

message MonthlyCheckResponse {
    repeated MonthlyPlayedTime data = 1;
}
